Make the Copy/Move actions in the message reader window work consistently

That is, consistently with those in the main KMail window.  Use those
main window actions to set the text and icon, so that the icon fallback
implemented in Akonadi::StandardActionManager works.  Save the folder
used for a copy or move action in the recently used folder list so that
the list is updated even though we are not using the standard Akonadi
actions.

BUG:435410